--- a/calculator.html
+++ b/calculator.html
@@ -5,7 +5,6 @@ function cube() {
  var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 3);
 }
-<<<<<<< HEAD
 function seno() {
   var num = document.getElementById("n1");
   num.value = Math.sin(num.value);
@@ -14,12 +13,13 @@ function cuarta() {
  var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 4);
 }
-=======
 function square() {
  var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 2);
- 
->>>>>>> x^2 button
+}
+function inverse() {
+ var num = document.getElementById("n1");
+ num.value = 1/(num.value);
 }
 </script>
 </head>
@@ -29,12 +29,10 @@ function square() {
  <input type="text" id="n1">
  <p>
  <button onclick="cube()"> x^3 </button>
-<<<<<<< HEAD
  <button onclick="cuarta()"> x^4 </button>
  <button onclick="seno()"> sin(x) </button>
-=======
  <button onclick="square()"> x^2 </button>
->>>>>>> x^2 button
+ <button onclick="inverse()"> 1/x </button>
  </p>
 </body>
 </html>
